
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.8.1"
sha2 = "0.9.8"
switchboard-program = "0.1.52" # requires `rustc --version` >= 1.51.0
easy-hasher = "2.2.1"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "=1.8.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
